WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115839
Garbage down left side of nytimes.com page (if subscriber)
https://bugs.webkit.org/show_bug.cgi?id=115839
Summary
Garbage down left side of nytimes.com page (if subscriber)
Simon Fraser (smfr)
Reported
2013-05-08 17:59:27 PDT
Created
attachment 201124
[details]
Testcase The nytimes.com home page shows a strip of garbage down the left side for some people (subscribers?). Reduction attached.
Attachments
Testcase
(802 bytes, text/html)
2013-05-08 17:59 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(5.32 KB, patch)
2013-05-08 18:41 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-05-08 17:59:50 PDT
<
rdar://problem/13835936
>
Simon Fraser (smfr)
Comment 2
2013-05-08 18:01:12 PDT
RenderLayer::backgroundIsKnownToBeOpaqueInRect() can only consult layer lists if the layer doesn't have overflow, otherwise the lists might be getting clipped out.
Simon Fraser (smfr)
Comment 3
2013-05-08 18:41:45 PDT
Created
attachment 201127
[details]
Patch
Simon Fraser (smfr)
Comment 4
2013-05-10 17:31:57 PDT
https://trac.webkit.org/r149914
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug