Garbage down left side of nytimes.com page (if subscriber) https://bugs.webkit.org/show_bug.cgi?id=115839

Source/WebCore:

Reviewed by Antti Koivisto.

RenderLayer::backgroundIsKnownToBeOpaqueInRect() would incorrectly return true
for layers where the given rect wasn't contained in the background rect, but
where some child layer obscured the rect, even though clipping hid part
of that child layer.

So bail from RenderLayer::backgroundIsKnownToBeOpaqueInRect() if we have
any overflow clipping. This could be enhanced in future to test whether child
layers obscure the clipping rect, but that would be more expensive.

Test: compositing/contents-opaque/overflow-hidden-child-layers.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::backgroundIsKnownToBeOpaqueInRect):

LayoutTests:

Reviewed by Antti Koivisto.

* compositing/contents-opaque/overflow-hidden-child-layers-expected.txt: Added.
* compositing/contents-opaque/overflow-hidden-child-layers.html: Added.

Canonical link: https://commits.webkit.org/134364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149914 268f45cc-cd09-0410-ab3c-d52691b4dbfc